Bug 262403. Don't do a line break just because a float was broken across pages. Also, squash some assertions while printing. r+sr=dbaron